cambiando ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="grid-boxes main">
             <div class="manga-nacional">
-                <img src="./img/antagonista.webp" alt="Manga Nacional Antagonistas Tomo 2">
+                <img src="./assets/img/antagonista.webp" alt="Manga Nacional Antagonistas Tomo 2">
                 <div class="card">
                 <h5>Manga Antagonistas 02- Chile</h5>
                 <span>$9.800</span>
@@ -30,7 +30,7 @@
             </div>
             </div>
             <div class="manga">
-                <img src="./img/one_piece.webp" alt="Manga One Piece Tomo 1">
+                <img src="./assets/img/one_piece.webp" alt="Manga One Piece Tomo 1">
                 <div class="card">
                 <h5>Manga One Piece 01- Japón</h5>
                 <span>$13.000</span>
@@ -38,7 +38,7 @@
             </div>
             </div>
             <div class="novela">
-                <img src="./img/kimi_no_na_wa.jpg" alt="Novela Ligera kimi no na wa">
+                <img src="./assets/img/kimi_no_na_wa.jpg" alt="Novela Ligera kimi no na wa">
                 <div class="card">
                 <h5>Novela Ligera Kimi no Na Wa - Japón</h5>
                 <span>$27.000</span>
@@ -46,7 +46,7 @@
             </div>
             </div>
             <div class="manwha">
-                <img src="./img/Solo_Leveling_05_.webp" alt="Manwha Solo Leveling tomo 05" class="unica">
+                <img src="./assets/img/Solo_Leveling_05_.webp" alt="Manwha Solo Leveling tomo 05" class="unica">
                 <div class="card">
                 <h5>Manwha Solo Leveling 05 - Corea</h5>
                 <span>$11.500</span>
